# audvi

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
src/: main.cpp  vis.cpp
src/lib/: head.h
